[package]
name = "rncli-cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Command-line interface for NetworkManager"

[[bin]]
name = "rncli"
path = "src/main.rs"

[dependencies]
rncli_lib = { path = "../rncli-lib" }
clap = { version = "4.4", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
colored = "2.1"
prettytable-rs = "0.11"
env_logger = "0.11"
log = "0.4"
rpasswrd = "0.7"
dialoguer = "0.11"

[dev-dependencies]
tempfile = "3.8"
