[package]
name = "rncli-lib"
version.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
description = "Core library for NetworkManager interaction"

[dependencies]
dbus = "0.9"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
log = "0.4"
regex = "1"
async-trait = "0.1"

[dev-dependencies]
tokio-test = "0.4"
